Coursera Data Science specialization course work

--- a/hw/hw2_practiceAssignment.html
+++ b/hw/hw2_practiceAssignment.html
@@ -373,13 +373,16 @@ summary {
 <h1>Practice Assignment</h1>
 <p>The goal of this assignment is to provide a “bridge” between the first two weeks of lectures and assignment 1 for those either new to R or struggling with how to approach the assignment.</p>
 <p>This guided example, will <strong>not</strong> provide a solution for programming assignment 1. However, it will guide you through some core concepts and give you some practical experience to hopefully make assignment 1 seems less daunting.</p>
+<p>First, check your working directory before downloading and unzipping data.</p>
+<p>If you’re not sure where your working directory is, you can find out with the <code>getwd()</code> command. Alternatively, you can view/change it through the Tools &gt; Global Options menu in R Studio.</p>
+<pre class="r"><code>getwd()</code></pre>
+<pre><code>## [1] &quot;C:/Users/nvanb/Documents/NathanPC/USF/R/LearningR/hw&quot;</code></pre>
 <p>To begin, download this file and unzip it into your R working directory.<br />
 <a href="http://s3.amazonaws.com/practice_assignment/diet_data.zip" class="uri">http://s3.amazonaws.com/practice_assignment/diet_data.zip</a></p>
 <p>You can do this in R with the following code:</p>
 <pre class="r"><code>dataset_url &lt;- &quot;http://s3.amazonaws.com/practice_assignment/diet_data.zip&quot;
 download.file(dataset_url, &quot;diet_data.zip&quot;)
 unzip(&quot;diet_data.zip&quot;, exdir = &quot;diet_data&quot;)</code></pre>
-<p>If you’re not sure where your working directory is, you can find out with the <code>getwd()</code> command. Alternatively, you can view/change it through the Tools &gt; Global Options menu in R Studio.</p>
 <p>So assuming you’ve unzipped the file into your R directory, you should have a folder called diet_data. In that folder there are five files. Let’s get a list of those files:</p>
 <pre class="r"><code>list.files(&quot;diet_data&quot;)</code></pre>
 <pre><code>## [1] &quot;Andy.csv&quot;  &quot;David.csv&quot; &quot;John.csv&quot;  &quot;Mike.csv&quot;  &quot;Steve.csv&quot;</code></pre>
@@ -403,18 +406,18 @@ head(andy)</code></pre>
 <p>This tells us that we 30 rows of data in 4 columns. There are some other commands we might want to run to get a feel for a new data file, <code>str()</code>, <code>summary()</code>, and <code>names()</code>.</p>
 <pre class="r"><code>str(andy)</code></pre>
 <pre><code>## &#39;data.frame&#39;:    30 obs. of  4 variables:
-##  $ Patient.Name: Factor w/ 1 level &quot;Andy&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ Patient.Name: chr  &quot;Andy&quot; &quot;Andy&quot; &quot;Andy&quot; &quot;Andy&quot; ...
 ##  $ Age         : int  30 30 30 30 30 30 30 30 30 30 ...
 ##  $ Weight      : int  140 140 140 139 138 138 138 138 138 138 ...
 ##  $ Day         : int  1 2 3 4 5 6 7 8 9 10 ...</code></pre>
 <pre class="r"><code>summary(andy)</code></pre>
-<pre><code>##  Patient.Name      Age         Weight           Day       
-##  Andy:30      Min.   :30   Min.   :135.0   Min.   : 1.00  
-##               1st Qu.:30   1st Qu.:137.0   1st Qu.: 8.25  
-##               Median :30   Median :137.5   Median :15.50  
-##               Mean   :30   Mean   :137.3   Mean   :15.50  
-##               3rd Qu.:30   3rd Qu.:138.0   3rd Qu.:22.75  
-##               Max.   :30   Max.   :140.0   Max.   :30.00</code></pre>
+<pre><code>##  Patient.Name            Age         Weight           Day       
+##  Length:30          Min.   :30   Min.   :135.0   Min.   : 1.00  
+##  Class :character   1st Qu.:30   1st Qu.:137.0   1st Qu.: 8.25  
+##  Mode  :character   Median :30   Median :137.5   Median :15.50  
+##                     Mean   :30   Mean   :137.3   Mean   :15.50  
+##                     3rd Qu.:30   3rd Qu.:138.0   3rd Qu.:22.75  
+##                     Max.   :30   Max.   :140.0   Max.   :30.00</code></pre>
 <pre class="r"><code>names(andy)</code></pre>
 <pre><code>## [1] &quot;Patient.Name&quot; &quot;Age&quot;          &quot;Weight&quot;       &quot;Day&quot;</code></pre>
 <p>So we have 30 days of data. To save you time, all of the other files match this format and length. I’ve made up 30 days worth of weight data for 5 subjects of an imaginary diet study.</p>
@@ -425,10 +428,10 @@ head(andy)</code></pre>
 <pre class="r"><code>andy[30, &quot;Weight&quot;]</code></pre>
 <pre><code>## [1] 135</code></pre>
 <p>Alternatively, you could create a subset of the ‘Weight’ column where the data where ‘Day’ is equal to 30.</p>
-<pre class="r"><code>andy[which(andy$Day == 30), &quot;Weight&quot;]</code></pre>
-<pre><code>## [1] 135</code></pre>
-<pre class="r"><code>andy[which(andy[,&quot;Day&quot;] == 30), &quot;Weight&quot;]</code></pre>
-<pre><code>## [1] 135</code></pre>
+<pre class="r"><code>andy[which(andy$Day == 30), &quot;Weight&quot;]
+andy[which(andy[,&quot;Day&quot;] == 30), &quot;Weight&quot;]</code></pre>
+<pre><code>## [1] 135
+## [1] 135</code></pre>
 <p>Or, we could use the <code>subset()</code> function to do the same thing:</p>
 <pre class="r"><code>subset(andy$Weight, andy$Day==30)</code></pre>
 <pre><code>## [1] 135</code></pre>
@@ -520,7 +523,7 @@ for (i in 1:5) {
 }
 str(dat)</code></pre>
 <pre><code>## &#39;data.frame&#39;:    150 obs. of  4 variables:
-##  $ Patient.Name: Factor w/ 5 levels &quot;Andy&quot;,&quot;David&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ Patient.Name: chr  &quot;Andy&quot; &quot;Andy&quot; &quot;Andy&quot; &quot;Andy&quot; ...
 ##  $ Age         : int  30 30 30 30 30 30 30 30 30 30 ...
 ##  $ Weight      : int  140 140 140 139 138 138 138 138 138 138 ...
 ##  $ Day         : int  1 2 3 4 5 6 7 8 9 10 ...</code></pre>
@@ -531,7 +534,7 @@ str(dat)</code></pre>
 }
 str(dat2)</code></pre>
 <pre><code>## &#39;data.frame&#39;:    30 obs. of  4 variables:
-##  $ Patient.Name: Factor w/ 1 level &quot;Steve&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ Patient.Name: chr  &quot;Steve&quot; &quot;Steve&quot; &quot;Steve&quot; &quot;Steve&quot; ...
 ##  $ Age         : int  55 55 55 55 55 55 55 55 55 55 ...
 ##  $ Weight      : int  225 225 225 224 224 224 223 223 223 223 ...
 ##  $ Day         : int  1 2 3 4 5 6 7 8 9 10 ...</code></pre>
@@ -573,7 +576,7 @@ dat_30</code></pre>
 <pre class="r"><code>weightmedian &lt;- function(directory, day)  {
         files_list &lt;- list.files(directory, full.names=TRUE)   #creates a list of files
         dat &lt;- data.frame()                             #creates an empty data frame
-        for (i in 1:5) {                                
+        for (i in 1:length(files_list)) {                                
                 #loops through the files, rbinding them together 
                 dat &lt;- rbind(dat, read.csv(files_list[i]))
         }
@@ -592,6 +595,8 @@ dat_30</code></pre>
 <hr />
 <p>One last quick note: The approach I’m showing above for building the data frame is submoptimal. It works, but generally speaking, you don’t want to build data frames or vectors by copying and re-copying them inside of a loop. If you’ve got a lot of data it can become very, very slow. However, this tutorial is meant to provide an introduction to these concepts, and you can use this approach successfully for programming assignments 1 and 3.</p>
 <p>If you’re interested in learning the better approach, check out Hadley Wickam’s excellent material on functionals within R: <a href="http://adv-r.had.co.nz/Functionals.html" class="uri">http://adv-r.had.co.nz/Functionals.html</a>. But if you’re new to both programming and R, I would skip it for now as it will just confuse you. Come back and revisit it (and the rest of this section) once you are able to write working functions using the approach above.</p>
+<div id="to-be-continued" class="section level3">
+<h3>To be continued … ——</h3>
 <p>However, for those of you that do want to see a better way to create a dataframe….</p>
 <p>The main issue with the approach above is growing an object inside of loop by copying and recopying it. It works, but it’s slow and if you’ve got a lot of data, it will probably cause issues. The better approach is to create an output object of an appropriate size and then fill it up.</p>
 <p>So the first thing we do is create an empty list that’s the length of our expected output. In this case, our input object is going to be <code>files_full</code> and our empty list is going to be <code>tmp</code>.</p>
@@ -613,55 +618,56 @@ summary(tmp)</code></pre>
 str(tmp)</code></pre>
 <pre><code>## List of 5
 ##  $ :&#39;data.frame&#39;:    30 obs. of  4 variables:
-##   ..$ Patient.Name: Factor w/ 1 level &quot;Andy&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##   ..$ Patient.Name: chr [1:30] &quot;Andy&quot; &quot;Andy&quot; &quot;Andy&quot; &quot;Andy&quot; ...
 ##   ..$ Age         : int [1:30] 30 30 30 30 30 30 30 30 30 30 ...
 ##   ..$ Weight      : int [1:30] 140 140 140 139 138 138 138 138 138 138 ...
 ##   ..$ Day         : int [1:30] 1 2 3 4 5 6 7 8 9 10 ...
 ##  $ :&#39;data.frame&#39;:    30 obs. of  4 variables:
-##   ..$ Patient.Name: Factor w/ 1 level &quot;David&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##   ..$ Patient.Name: chr [1:30] &quot;David&quot; &quot;David&quot; &quot;David&quot; &quot;David&quot; ...
 ##   ..$ Age         : int [1:30] 35 35 35 35 35 35 35 35 35 35 ...
 ##   ..$ Weight      : int [1:30] 210 209 209 209 209 209 209 208 208 208 ...
 ##   ..$ Day         : int [1:30] 1 2 3 4 5 6 7 8 9 10 ...
 ##  $ :&#39;data.frame&#39;:    30 obs. of  4 variables:
-##   ..$ Patient.Name: Factor w/ 1 level &quot;John&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##   ..$ Patient.Name: chr [1:30] &quot;John&quot; &quot;John&quot; &quot;John&quot; &quot;John&quot; ...
 ##   ..$ Age         : int [1:30] 22 22 22 22 22 22 22 22 22 22 ...
 ##   ..$ Weight      : int [1:30] 175 175 175 175 175 175 175 175 175 175 ...
 ##   ..$ Day         : int [1:30] 1 2 3 4 5 6 7 8 9 10 ...
 ##  $ :&#39;data.frame&#39;:    30 obs. of  4 variables:
-##   ..$ Patient.Name: Factor w/ 1 level &quot;Mike&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##   ..$ Patient.Name: chr [1:30] &quot;Mike&quot; &quot;Mike&quot; &quot;Mike&quot; &quot;Mike&quot; ...
 ##   ..$ Age         : int [1:30] 40 40 40 40 40 40 40 40 40 40 ...
 ##   ..$ Weight      : int [1:30] 188 188 188 188 189 189 189 189 189 189 ...
 ##   ..$ Day         : int [1:30] 1 2 3 4 5 6 7 8 9 10 ...
 ##  $ :&#39;data.frame&#39;:    30 obs. of  4 variables:
-##   ..$ Patient.Name: Factor w/ 1 level &quot;Steve&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##   ..$ Patient.Name: chr [1:30] &quot;Steve&quot; &quot;Steve&quot; &quot;Steve&quot; &quot;Steve&quot; ...
 ##   ..$ Age         : int [1:30] 55 55 55 55 55 55 55 55 55 55 ...
 ##   ..$ Weight      : int [1:30] 225 225 225 224 224 224 223 223 223 223 ...
 ##   ..$ Day         : int [1:30] 1 2 3 4 5 6 7 8 9 10 ...</code></pre>
 <p>What we just did was read in each of the csv files and place them inside of our list. Now we have a list of 5 elements called <code>tmp</code>, where each element of the list is a data frame containing one of the csv files. It just so happens that what we just did is functionally identical to using <code>lapply</code>.</p>
-<pre class="r"><code>str(lapply(files_full, read.csv))</code></pre>
+<pre class="r"><code>temp &lt;- lapply(files_full, read.csv)
+str(temp)</code></pre>
 <pre><code>## List of 5
 ##  $ :&#39;data.frame&#39;:    30 obs. of  4 variables:
-##   ..$ Patient.Name: Factor w/ 1 level &quot;Andy&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##   ..$ Patient.Name: chr [1:30] &quot;Andy&quot; &quot;Andy&quot; &quot;Andy&quot; &quot;Andy&quot; ...
 ##   ..$ Age         : int [1:30] 30 30 30 30 30 30 30 30 30 30 ...
 ##   ..$ Weight      : int [1:30] 140 140 140 139 138 138 138 138 138 138 ...
 ##   ..$ Day         : int [1:30] 1 2 3 4 5 6 7 8 9 10 ...
 ##  $ :&#39;data.frame&#39;:    30 obs. of  4 variables:
-##   ..$ Patient.Name: Factor w/ 1 level &quot;David&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##   ..$ Patient.Name: chr [1:30] &quot;David&quot; &quot;David&quot; &quot;David&quot; &quot;David&quot; ...
 ##   ..$ Age         : int [1:30] 35 35 35 35 35 35 35 35 35 35 ...
 ##   ..$ Weight      : int [1:30] 210 209 209 209 209 209 209 208 208 208 ...
 ##   ..$ Day         : int [1:30] 1 2 3 4 5 6 7 8 9 10 ...
 ##  $ :&#39;data.frame&#39;:    30 obs. of  4 variables:
-##   ..$ Patient.Name: Factor w/ 1 level &quot;John&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##   ..$ Patient.Name: chr [1:30] &quot;John&quot; &quot;John&quot; &quot;John&quot; &quot;John&quot; ...
 ##   ..$ Age         : int [1:30] 22 22 22 22 22 22 22 22 22 22 ...
 ##   ..$ Weight      : int [1:30] 175 175 175 175 175 175 175 175 175 175 ...
 ##   ..$ Day         : int [1:30] 1 2 3 4 5 6 7 8 9 10 ...
 ##  $ :&#39;data.frame&#39;:    30 obs. of  4 variables:
-##   ..$ Patient.Name: Factor w/ 1 level &quot;Mike&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##   ..$ Patient.Name: chr [1:30] &quot;Mike&quot; &quot;Mike&quot; &quot;Mike&quot; &quot;Mike&quot; ...
 ##   ..$ Age         : int [1:30] 40 40 40 40 40 40 40 40 40 40 ...
 ##   ..$ Weight      : int [1:30] 188 188 188 188 189 189 189 189 189 189 ...
 ##   ..$ Day         : int [1:30] 1 2 3 4 5 6 7 8 9 10 ...
 ##  $ :&#39;data.frame&#39;:    30 obs. of  4 variables:
-##   ..$ Patient.Name: Factor w/ 1 level &quot;Steve&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##   ..$ Patient.Name: chr [1:30] &quot;Steve&quot; &quot;Steve&quot; &quot;Steve&quot; &quot;Steve&quot; ...
 ##   ..$ Age         : int [1:30] 55 55 55 55 55 55 55 55 55 55 ...
 ##   ..$ Weight      : int [1:30] 225 225 225 224 224 224 223 223 223 223 ...
 ##   ..$ Day         : int [1:30] 1 2 3 4 5 6 7 8 9 10 ...</code></pre>
@@ -669,21 +675,22 @@ str(tmp)</code></pre>
 <p>Now we still need to go from a list to a single data frame, although you <em>can</em> manipulate the data within this structure:</p>
 <pre class="r"><code>str(tmp[[1]])</code></pre>
 <pre><code>## &#39;data.frame&#39;:    30 obs. of  4 variables:
-##  $ Patient.Name: Factor w/ 1 level &quot;Andy&quot;: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ Patient.Name: chr  &quot;Andy&quot; &quot;Andy&quot; &quot;Andy&quot; &quot;Andy&quot; ...
 ##  $ Age         : int  30 30 30 30 30 30 30 30 30 30 ...
 ##  $ Weight      : int  140 140 140 139 138 138 138 138 138 138 ...
 ##  $ Day         : int  1 2 3 4 5 6 7 8 9 10 ...</code></pre>
 <pre class="r"><code>head(tmp[[1]][,&quot;Day&quot;])</code></pre>
 <pre><code>## [1] 1 2 3 4 5 6</code></pre>
 <p>We can use a function called <code>do.call()</code> to combine <code>tmp</code> into a single data frame. <code>do.call</code> lets you specify a function and then passes a list as if each element of the list were an argument to the function. The syntax is <code>do.call(function_you_want_to_use, list_of_arguments)</code>. In our case, we want to <code>rbind()</code> our list of data frames, <code>tmp</code>.</p>
-<pre class="r"><code>output &lt;- do.call(rbind, tmp)
+<pre class="r"><code>output &lt;- do.call(rbind, temp)
 str(output)</code></pre>
 <pre><code>## &#39;data.frame&#39;:    150 obs. of  4 variables:
-##  $ Patient.Name: Factor w/ 5 levels &quot;Andy&quot;,&quot;David&quot;,..: 1 1 1 1 1 1 1 1 1 1 ...
+##  $ Patient.Name: chr  &quot;Andy&quot; &quot;Andy&quot; &quot;Andy&quot; &quot;Andy&quot; ...
 ##  $ Age         : int  30 30 30 30 30 30 30 30 30 30 ...
 ##  $ Weight      : int  140 140 140 139 138 138 138 138 138 138 ...
 ##  $ Day         : int  1 2 3 4 5 6 7 8 9 10 ...</code></pre>
 <p>This approach avoids all of the messy copying and recopying of the data to build the final data frame. It’s much more “R-like” and works quite a bit faster than our other approach.</p>
+</div>
 </div>
 
 
